apps/authelia/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authelia
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: authelia
      app.kubernetes.io/name: authelia
  serviceName: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: authelia
        app.kubernetes.io/name: authelia
    spec:
      containers:
        - name: authelia
          image: authelia
          args:
            - --config
            - /config/configuration.enc.yaml
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          ports:
            - name: http
              containerPort: 9091
            - name: metrics
              containerPort: 9959
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /healthz
              port: http
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /config/configuration.enc.yaml
              subPath: configuration.enc.yaml
              readOnly: true
            - name: data
              mountPath: /config
          resources:
            requests:
              cpu: 25m
              memory: 250Mi
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: config
          secret:
            secretName: authelia
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 512Mi
        storageClassName: longhorn-standard
        volumeMode: Filesystem
        accessModes:
          - ReadWriteOncePod
