apps/authelia/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia
spec:
  ports:
    - name: http
      appProtocol: http
      port: 9091
      targetPort: http
    - name: metrics
      appProtocol: http
      port: 9959
      targetPort: metrics
  selector:
    app.kubernetes.io/instance: authelia
    app.kubernetes.io/name: authelia
